--- a/css/invie.css
+++ b/css/invie.css
@@ -12,7 +12,7 @@ input:focus, textarea:focus {
     background: lightgray;
 }
 
-.header.background {
+#header.header.background {
     padding-top: 20px;
 }
 
